@@ -1,3 +1,7 @@
+2012-04-24 Raul Jimenez Estupinan  <raul.jimenez.estupinan@cern.ch>
+	* tag V01-06-58
+	* Improve reconnect method (ConfDB.java).
+	
 2012-04-23 Raul Jimenez Estupinan  <raul.jimenez.estupinan@cern.ch>
 	* tag V01-06-57
 	* Update ConfCache (by Ulf).
